minor edit/housekeeping activity

--- a/src/pages/do-olls-that-will-talk/index.astro
+++ b/src/pages/do-olls-that-will-talk/index.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro";
-import dollSvgUrl from "./dolls-that-will-talk.svg?url";
+import dollSvgUrl from "./_dolls-that-will-talk.svg?url";
 
 const title = "The Do-olls That Will Talk";
 const description = "A timing difference I can't unhear.";
