--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -110,6 +110,12 @@
   --rule: #444;
 }
 
+[data-theme-light] {
+  --bg: #fffff8;
+  --fg: #111;
+  --rule: #ccc;
+}
+
 /* -------------------- Reset -------------------- */
 *,
 *::before,
