minor edit/housekeeping activity

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -90,4 +90,10 @@ const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, m
       fetchRandomAdage();
     </script>
   </section>
+  <section>
+    <h2>Everyday Carry</h2>
+    <ul>
+      <li>A Permanent Marker</li>
+    </ul>
+  </section>
 </BaseLayout>
