--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,25 +1,28 @@
 ---
-import "../styles/styles.css";
+import "@/styles/global.css";
+import BaseHead from "@/components/BaseHead.astro";
+import Header from "@/components/Header.astro";
+import Footer from "@/components/Footer.astro";
 
-import BaseHead from "../components/BaseHead.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
+interface Props {
+  title?: string;
+  description?: string;
+  current?: string;
+}
+
+const { title, description, current } = Astro.props;
 ---
+
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-    <BaseHead />
-	</head>
-	<body>
-    <Header />
+  <head>
+    <BaseHead title={title} description={description} />
+  </head>
+  <body>
+    <Header current={current} />
     <article>
       <slot />
     </article>
     <Footer />
-	</body>
+  </body>
 </html>
